# KalaCl

./: CMakeLists.txt  LICENSE  README.md
include/: dataset_loader.h  kala_cell.h  kala_network.h  kala_rnn.h
src/: dataset_loader.cpp  kala_cell.cpp  kala_network.cpp  kala_rnn.cpp  main.cpp
